--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <script src="script.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
-<body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+<!--<body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">-->
+<body>
 <div style="margin-top: 50px " >
     <b>
         <h1>
