--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <b>BLIND CODE</b>
             </h1>
             <br>
-            <a class="start-button" type="button" href="/user/login" >Begin</a>
+            <a class="start-button" type="button" href="/user" >Begin</a>
         </div>
     <div class="col-3"></div>
     </div>
