--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
 <div style="margin-top: 300px">
-    <div class="row"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-
+    <div class="row">
         <div class="col-3"></div>
         <div class="col-6" align="center">
             <h1 class="main-title">
