--- a/q2/index.html
+++ b/q2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Question1</title>
+    <title>Question2</title>
 
     <link rel="stylesheet" type="text/css" href="../codeMirror/lib/codemirror.css">
     <script src="../codeMirror/lib/codemirror.js"></script>
@@ -10,7 +10,8 @@
     <script src="../codeMirror/mode/xml/xml.js"></script>
     <script src="../codeMirror/mode/clike/clike.js"></script>
     <link href="../codeMirror/theme/dracula.css" rel="stylesheet">
-    <script src="script.js"></script>
+    <script src="../scriptQuestion.js"></script>
+    <script src="../q1/ques1.js"></script>
 
 </head>
 <body>
@@ -26,8 +27,10 @@
 <br>
 <br>
 <button type="button" onClick="onClick()">SHOW SCREEN</button>
+<button type="button" onClick="onCompile()">Compile</button>
 <button type="button"  onClick="onSubmit()">SUBMIT</button>
 <p>Attempts : <a id="clicks">0</a></p>
+<p id="output"></p>
 
 <script type="text/javascript">
     var editor = CodeMirror.fromTextArea(
