--- a/q4/index.html.html
+++ b/q4/index.html.html
@@ -10,7 +10,7 @@
     <script src="../codeMirror/mode/xml/xml.js"></script>
     <script src="../codeMirror/mode/clike/clike.js"></script>
     <link href="../codeMirror/theme/dracula.css" rel="stylesheet">
-    <script src="script.js"></script>
+    <script src="../scriptQuestion.js"></script>
 
 </head>
 <body>
