--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
     <title>BlindCode</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</head>
-<body>
-<div style="margin-top: 300px">
+    </head>
+<body background="20181025_113429_0001.png">
+<div style="margin-top: 300px" >
     <div class="row">
         <div class="col-3"></div>
         <div class="col-6" align="center">
-            <h1 class="main-title">
+            <h1 class="main-title" style="color: #FFFFFF">
                 <b>BLIND CODE</b>
             </h1>
             <br>
-            <a class="start-button" type="button" href="/user" >Begin</a>
+            <a class="start-button" type="button" href="/user" ><b><h2 style="color: #ffffaa" >Begin</h2></b></a>
         </div>
     <div class="col-3"></div>
     </div>
 
 </div>
-
 </body>
 </html>
